[gd_scene load_steps=18 format=3 uid="uid://c8iimeavbdci7"]

[ext_resource type="PackedScene" uid="uid://bd7wig7c4xlqe" path="res://modules/world_player/player.tscn" id="1_worldplayer"]
[ext_resource type="Script" uid="uid://d2oq01pxsr6xj" path="res://world_marching_cubes/chunk_manager.gd" id="4_terrain"]
[ext_resource type="Script" uid="uid://bvdox6682bbj2" path="res://world_building_system/building_manager.gd" id="5_buildings"]
[ext_resource type="Script" uid="uid://bmf31iakbdeu4" path="res://vegetation_manager.gd" id="6_vegetation"]
[ext_resource type="Script" uid="uid://bnfmnblgu4i8q" path="res://world_marching_cubes/roads/road_manager.gd" id="7_roads"]
[ext_resource type="Script" uid="uid://ds7smfcuouehv" path="res://world_building_system/prefab_spawner.gd" id="8_prefabs"]
[ext_resource type="PackedScene" uid="uid://dxkm8p7qhwvam" path="res://game/entities/entity_manager.tscn" id="9_entities"]
[ext_resource type="Script" uid="uid://o0r1v40u60lk" path="res://world_vehicles/vehicle_manager.gd" id="10_vehicles"]
[ext_resource type="Script" uid="uid://bts6arlg03cxx" path="res://world_building_system/prefab_capture.gd" id="11_prefab_capture"]
[ext_resource type="Script" uid="uid://c00fsbscdns7l" path="res://world_building_system/building_generator.gd" id="12_building_generator"]
[ext_resource type="Script" uid="uid://ctq5qui81d2k0" path="res://world_building_system/debug_teleporter.gd" id="13_debug"]
[ext_resource type="PackedScene" path="res://modules/world_player/ui_loading_screen/loading_screen.tscn" id="14_loading"]

[sub_resource type="ProceduralSkyMaterial" id="SkyMat"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky"]
sky_material = SubResource("SkyMat")

[sub_resource type="Environment" id="Env"]
background_mode = 2
sky = SubResource("Sky")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_selection"]
size = Vector3(1.01, 1.01, 1.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_selection"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 0, 1, 0.5)

[node name="MainGame" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Env")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldPlayer" parent="." groups=["player"] instance=ExtResource("1_worldplayer")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 131.172, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UnderwaterEffect" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.2, 0.12, 0.4)

[node name="TerrainManager" type="Node3D" parent="." node_paths=PackedStringArray("viewer") groups=["terrain_manager"]]
script = ExtResource("4_terrain")
viewer = NodePath("../WorldPlayer")
min_finalization_interval_ms = 0
exploration_delay_ms = 0

[node name="VegetationManager" type="Node3D" parent="." node_paths=PackedStringArray("terrain_manager") groups=["vegetation_manager"]]
script = ExtResource("6_vegetation")
terrain_manager = NodePath("../TerrainManager")
tree_y_offset = 9.5
grass_scale = 0.01
grass_collision_radius = 0.7
rock_scale = 0.3
rock_y_offset = 0.3
debug_collision = true

[node name="BuildingManager" type="Node3D" parent="." groups=["building_manager"]]
script = ExtResource("5_buildings")

[node name="RoadManager" type="Node3D" parent="." node_paths=PackedStringArray("terrain_manager")]
script = ExtResource("7_roads")
terrain_manager = NodePath("../TerrainManager")

[node name="PrefabSpawner" type="Node3D" parent="." node_paths=PackedStringArray("terrain_manager", "building_manager")]
script = ExtResource("8_prefabs")
terrain_manager = NodePath("../TerrainManager")
building_manager = NodePath("../BuildingManager")

[node name="PrefabCapture" type="Node" parent="." node_paths=PackedStringArray("building_manager", "player")]
script = ExtResource("11_prefab_capture")
building_manager = NodePath("../BuildingManager")
player = NodePath("../WorldPlayer")

[node name="EntityManager" parent="." node_paths=PackedStringArray("terrain_manager") instance=ExtResource("9_entities")]
terrain_manager = NodePath("../TerrainManager")

[node name="VehicleManager" type="Node" parent="." node_paths=PackedStringArray("player") groups=["vehicle_manager"]]
script = ExtResource("10_vehicles")
player = NodePath("../WorldPlayer")

[node name="SelectionBox" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_selection")
surface_material_override/0 = SubResource("StandardMaterial3D_selection")

[node name="BuildingGenerator" type="Node3D" parent="." node_paths=PackedStringArray("prefab_spawner", "terrain_manager")]
script = ExtResource("12_building_generator")
prefab_spawner = NodePath("../PrefabSpawner")
terrain_manager = NodePath("../TerrainManager")

[node name="DebugTeleporter" type="Node" parent="."]
script = ExtResource("13_debug")

[node name="LoadingScreen" parent="." instance=ExtResource("14_loading")]
